src/components/snapshots/gview__components__content_viewer__tests__content_viewer_draw_scrolled.snap
---
source: src/components/content_viewer.rs
expression: "format!(\"{:?}\", buffer)"
snapshot_kind: text
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        "┌scrolled.rs───────────────────────────────────────────────────────────────────┐",
        "│Line 4                                                                        │",
        "│Line 5                                                                        │",
        "│Line 6                                                                        │",
        "│Line 7                                                                        │",
        "│Line 8                                                                        │",
        "│Line 9                                                                        │",
        "│Line 10                                                                       │",
        "│Line 11                                                                       │",
        "│Line 12                                                                       │",
        "│Line 13                                                                       │",
        "│Line 14                                                                       │",
        "│Line 15                                                                       │",
        "│Line 16                                                                       │",
        "│Line 17                                                                       │",
        "│Line 18                                                                       │",
        "│Line 19                                                                       │",
        "│Line 20                                                                       │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "└──────────────────────────────────────────────────────────────────────────────┘",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 12, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
