src/components/snapshots/gview__components__content_viewer__tests__content_viewer_draw_with_content.snap
---
source: src/components/content_viewer.rs
expression: "format!(\"{:?}\", buffer)"
snapshot_kind: text
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        "┌main.rs───────────────────────────────────────────────────────────────────────┐",
        "│fn main() {                                                                   │",
        "│    println!("Hello, world!");                                                │",
        "│}                                                                             │",
        "│                                                                              │",
        "│fn another_function() {                                                       │",
        "│    // Some comment                                                           │",
        "│    let x = 42;                                                               │",
        "│    println!("x = {}", x);                                                    │",
        "│}                                                                             │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "└──────────────────────────────────────────────────────────────────────────────┘",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 8, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
