src/components/snapshots/gview__components__content_viewer__tests__content_viewer_line_number_alignment.snap
---
source: src/components/content_viewer.rs
expression: "format!(\"{:?}\", buffer)"
snapshot_kind: text
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        "┌alignment_test.rs─────────────────────────────────────────────────────────────┐",
        "│  1 | Line 1                                                                  │",
        "│  2 | Line 2                                                                  │",
        "│  3 | Line 3                                                                  │",
        "│  4 | Line 4                                                                  │",
        "│  5 | Line 5                                                                  │",
        "│  6 | Line 6                                                                  │",
        "│  7 | Line 7                                                                  │",
        "│  8 | Line 8                                                                  │",
        "│  9 | Line 9                                                                  │",
        "│ 10 | Line 10                                                                 │",
        "│ 11 | Line 11                                                                 │",
        "│ 12 | Line 12                                                                 │",
        "│ 13 | Line 13                                                                 │",
        "│ 14 | Line 14                                                                 │",
        "│ 15 | Line 15                                                                 │",
        "│ 16 | Line 16                                                                 │",
        "│ 17 | Line 17                                                                 │",
        "│ 18 | Line 18                                                                 │",
        "│ 19 | Line 19                                                                 │",
        "│ 20 | Line 20                                                                 │",
        "│ 21 | Line 21                                                                 │",
        "│ 22 | Line 22                                                                 │",
        "└──────────────────────────────────────────────────────────────────────────────┘",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 18, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
